Fix layout constrain when content is too narrow

--- a/source/00-config/mixins/_layout.scss
+++ b/source/00-config/mixins/_layout.scss
@@ -33,6 +33,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: rem($max-width);
+  width: 100%;
 
   @if $margins-mobile {
     padding-left: rem($margins-mobile);
